Bug 37954 - EDITING Writer AutoSpellcheck flags capitalized words as misspelled despite being added lowercase in the custom dictionary
Summary: EDITING Writer AutoSpellcheck flags capitalized words as misspelled despite b...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.3.2 release
Hardware: x86 (IA32) All
: medium trivial
Assignee: Not Assigned
URL:
Whiteboard: target:4.0.0
Keywords:
: 39997 50294 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-06-05 10:17 UTC by Chris Peñalver
Modified: 2014-02-21 11:58 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Peñalver 2011-06-05 10:17:32 UTC
Downstream bug may be found at:
https://bugs.launchpad.net/ubuntu/+source/openoffice.org/+bug/220703

1) lsb_release -rd
Description: Ubuntu 11.04
Release: 11.04

2) apt-cache policy libreoffice-writer
libreoffice-writer:
  Installed: 1:3.3.2-1ubuntu5
  Candidate: 1:3.3.2-1ubuntu5
  Version table:
 *** 1:3.3.2-1ubuntu5 0
        500 http://us.archive.ubuntu.com/ubuntu/ natty-updates/main i386 Packages
        100 /var/lib/dpkg/status
     1:3.3.2-1ubuntu4 0
        500 http://us.archive.ubuntu.com/ubuntu/ natty/main i386 Packages

3) What is expected to happen in LibreOffice Writer is when one adds the word "extrusión" to the custom dictionary, AutoSpellcheck does not underline the words "Extrusión" and "EXTRUSIÓN" as misspelled.

4) What happens instead is AutoSpellcheck does underline these case variations and suggests it to be the lowercased version.

WORKAROUND: Add each case variant.
Comment 1 Rainer Bielefeld Retired 2011-07-03 00:41:33 UTC
Not a Bug, but a feature?
Seems to be INVALID without evidences for the expected behavior:

1. German Wort "man" is correct, bug "Man" would be wrong, so I doubt that  
assumption "...  does not underline the words "Extrusión" ..." from original 
report is correct, why should spellcheck accept misspelled word "Man"?
IMHO assumption in report only is correct for unchecked preference "Check Capitalization".

2. The "EXTRUSIÓN" problem might be something different. The option "Check uppercase words" seems to mean:
- unchecked option: No uppercase word will be marked as misspelled, even nonsense
  words like "GANOIRIEJKTGTKJTRINZROSAAAAAAAAAA"
- Checked option: onl words known in lowercase or with leading uppercase first 
  letter will be accepted as correct in complete uppercase
So I agree with the assumption, but that seems to be completely broken in 3.4.1, I will file a separate report after some more investigation.

@Christopher:
Can you please add some information concerning my question in 1.?
Comment 2 Chris Peñalver 2011-07-03 08:40:58 UTC
Rainer Bielefeld:

Unchecking "Check Capitalization" has no impact on this issue.

In Microsoft Office Word 2003 (11.5604.6505), if one adds extrusión in the Custom Dictionary, Extrusión and EXTRUSIÓN are not flagged as misspelled.

The OOo bug for this may be found at: http://openoffice.org/bugzilla/show_bug.cgi?id=18737
Comment 3 Björn Michaelsen 2011-12-23 12:01:29 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 4 Scott M. Sanders 2011-12-30 11:00:35 UTC
This persists in 3.5.0beta2.
Comment 5 Chris Peñalver 2011-12-30 14:32:32 UTC
Scott M. Sanders, please do not toggle the Version. For more on this please see:
http://wiki.documentfoundation.org/BugReport_Details#Version

As well, please do not toggle the Platform without documenting the OS and hardware platform tested against.
Comment 6 Scott M. Sanders 2011-12-31 19:46:36 UTC
Um it affects Win 7 64-bit on latest beta, so feel free to toggle it back to what I set.
Comment 7 Urmas 2012-01-17 14:43:56 UTC
*** Bug 39997 has been marked as a duplicate of this bug. ***
Comment 8 Urmas 2012-01-17 14:57:56 UTC
Of course programmers are busy with more serious issues, as colorful sheet labels or new footer separators. One may wonder, do they use their product themselves?
Comment 9 manj_k 2012-05-24 15:21:08 UTC
(In reply to comment #2)
> [...]
> The OOo bug for this may be found at:
> http://openoffice.org/bugzilla/show_bug.cgi?id=18737

Removed outdated URL in 'See Also:'
Added correct URL for Apache OOo Bugzilla:
https://issues.apache.org/ooo/show_bug.cgi?id=18737
Comment 10 Jon Grossart 2012-05-26 20:54:24 UTC
*** Bug 50294 has been marked as a duplicate of this bug. ***
Comment 11 Not Assigned 2012-11-26 09:08:10 UTC
Laszlo Nemeth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4d160f28b510ce9277b5d6f85eb83b87beb717fe

fdo#37954, #i18737# accept capitalized lowercase custom words



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.