fdo#37954, #i18737# accept capitalized lowercase custom words

Change-Id: I3f8a7d1912952730151e2444f426aff8b2ba4c97
Reviewed-on: https://gerrit.libreoffice.org/1162
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>
Reviewed-by: Németh László <nemeth@numbertext.org>